--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
                                         </a>
                                         <ul class="dropdown-menu-items">
                                             <li>
-                                                <a href="" class="hover-underline light-line">
+                                                <a href="books.html" class="hover-underline light-line">
                                                     <span class="link-text">Childrens Books</span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="" class="hover-underline light-line">
+                                                <a href="books.html" class="hover-underline light-line">
                                                     <span class="link-text">Novels</span>
                                                 </a>
                                             </li>
@@ -114,12 +114,12 @@
                                         </a>
                                         <ul class="dropdown-menu-items">
                                             <li>
-                                                <a href="" class="hover-underline light-line">
+                                                <a href="arts.html" class="hover-underline light-line">
                                                     <span class="link-text">Paintings</span>
                                                 </a>
                                             </li>
                                             <li>
-                                                <a href="" class="hover-underline light-line">
+                                                <a href="arts.html" class="hover-underline light-line">
                                                     <span class="link-text">Illustrations</span>
                                                 </a>
                                             </li>
