--- a/books.html
+++ b/books.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Books by Heena</title>
-	<link rel="stylesheet" href="assets/css/workstyle.css">
+	<link rel="stylesheet" href="assets/css/worksstyle.css">
 </head>
 
 <body>
