--- a/books.html
+++ b/books.html
@@ -26,7 +26,7 @@
 
 					<h1 class="profile-user-name">Heena Singhal</h1>
 
-					<button class="btn-77" a href="./arts.html">Art Works ⁕</button>
+					<button class="btn-77" a href="arts.html">Art Works ⁕</button>
 
 				</div>
 
