--- a/arts.html
+++ b/arts.html
@@ -26,7 +26,7 @@
 
 					<h1 class="profile-user-name">Heena Singhal</h1>
 
-					<button class="btn-77" a href="./index.html">Books ⁕</button>
+					<button class="btn-77" a href="books.html">Books ⁕</button>
 
 				</div>
 
